# Simple-Harmonic-Oscillation-Simulation

./: CMakeLists.txt  LICENSE
include/: util.h
src/: main.c  main.cpp
